--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-  "dev": "cross-env NODE_ENV=development nodemon backend/server.js",
-  "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
-  "start": "cross-env NODE_ENV=production node backend/server.js"
+ 	"start": "node ./backend/server.js",
+    "dev": "nodemon ./backend/server.js"
 }
 ,
 	"type": "module",
@@ -16,6 +15,7 @@
 	"dependencies": {
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
+		"cors": "^2.8.5",
 		"mongoose": "^8.5.1"
 	},
 	"devDependencies": {
