--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,17 +17,14 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Run tests (backend)
-        run: docker run --rm --entrypoint "" mon-backend bash -c "npm install && npm test" || echo "✅ Aucun test trouvé, OK"
-
-      - name: Run tests (frontend)
-        run: docker run --rm --entrypoint "" mon-frontend bash -c "npm install && npm test" || echo "no tests found"
-
-
       - name: Build backend image
         run: docker build -t mon-backend .
 
       - name: Build frontend image
         run: docker build -t mon-frontend ./frontend
 
-     
+      - name: Run tests (backend)
+        run: docker run mon-backend npm test || echo "no tests found"
+
+      - name: Run tests (frontend)
+        run: docker run mon-frontend npm test || echo "no tests found"
