--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "test": "jest"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
@@ -31,9 +30,6 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "vite": "^5.3.4",
-    "jest": "^29.5.0",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/jest-dom": "^5.16.4"
+    "vite": "^5.3.4"
   }
 }
