--- a/package.json
+++ b/package.json
@@ -4,24 +4,22 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-	  "start": "node ./backend/server.js",
-	  "dev": "nodemon ./backend/server.js",
-	  "test": "jest"
-	},
+ 	"start": "node ./backend/server.js",
+    "dev": "nodemon ./backend/server.js"
+}
+,
 	"type": "module",
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-	  "dotenv": "^16.4.5",
-	  "express": "^4.19.2",
-	  "cors": "^2.8.5",
-	  "mongoose": "^8.5.1"
+		"dotenv": "^16.4.5",
+		"express": "^4.19.2",
+		"cors": "^2.8.5",
+		"mongoose": "^8.5.1"
 	},
 	"devDependencies": {
-	  "cross-env": "^7.0.3",
-	  "nodemon": "^3.1.4",
-	  "jest": "^29.5.0"
+		"cross-env": "^7.0.3",
+		"nodemon": "^3.1.4"
 	}
-  }
-  
+}
